--- a/src/view/fornecedores/EcraFornecedores.form
+++ b/src/view/fornecedores/EcraFornecedores.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="view.fornecedores.EcraFornecedores">
-  <grid id="27dc6" binding="painelEcraFornecedores" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="painelEcraFornecedores" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="1280" height="720"/>
@@ -13,7 +13,7 @@
     <children>
       <component id="963e1" class="javax.swing.JButton" binding="btnAdicionarFornecedor">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Adicionar Fornecedor"/>
@@ -21,7 +21,7 @@
       </component>
       <component id="c4232" class="javax.swing.JButton" binding="btnSair">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="btnSair"/>
@@ -29,7 +29,7 @@
       </component>
       <scrollpane id="732a9" binding="scrollPaneFornecedores">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="700" height="500"/>
             <preferred-size width="700" height="500"/>
           </grid>
@@ -40,6 +40,14 @@
         <border type="none"/>
         <children/>
       </scrollpane>
+      <component id="9d454" class="javax.swing.JLabel" binding="lblFornecedores">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Fornecedores"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
