--- a/src/view/fornecedores/EcraDetalhesFornecedor.form
+++ b/src/view/fornecedores/EcraDetalhesFornecedor.form
@@ -35,7 +35,7 @@
           <text value="Inativar Fornecedor"/>
         </properties>
       </component>
-      <grid id="fde8f" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="fde8f" binding="painelDetalhesFornecedor" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
