--- a/src/view/livros/EcraDetalhesLivro.form
+++ b/src/view/livros/EcraDetalhesLivro.form
@@ -219,7 +219,7 @@
               <text value="Subgénero:"/>
             </properties>
           </component>
-          <component id="f7922" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+          <component id="f7922" class="javax.swing.JTextField" binding="txtSubgenero">
             <constraints>
               <grid row="8" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
