--- a/src/view/livros/EcraDetalhesLivro.form
+++ b/src/view/livros/EcraDetalhesLivro.form
@@ -35,7 +35,7 @@
           <text value="Alterar Estado"/>
         </properties>
       </component>
-      <grid id="1af50" binding="painelDetalhesLivro" layout-manager="GridLayoutManager" row-count="9" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="1af50" binding="painelDetalhesLivro" layout-manager="GridLayoutManager" row-count="10" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -235,7 +235,41 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="3cb8a" class="javax.swing.JLabel" binding="lblEmprestadoPrefix">
+            <constraints>
+              <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Emprestado"/>
+            </properties>
+          </component>
+          <component id="c0ba0" class="javax.swing.JLabel" binding="lblEmprestado">
+            <constraints>
+              <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Não"/>
+            </properties>
+          </component>
+          <component id="427d1" class="javax.swing.JLabel" binding="lblReservadoPrefix">
+            <constraints>
+              <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Reservado"/>
+            </properties>
+          </component>
+          <component id="1802f" class="javax.swing.JLabel" binding="lblReservado">
+            <constraints>
+              <grid row="9" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Não"/>
+            </properties>
           </component>
         </children>
       </grid>
