--- a/src/view/livros/EcraDetalhesLivro.form
+++ b/src/view/livros/EcraDetalhesLivro.form
@@ -81,7 +81,9 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <text value=""/>
+            </properties>
           </component>
           <component id="79355" class="javax.swing.JLabel" binding="lblEstadoPrefix">
             <constraints>
@@ -106,14 +108,6 @@
             <properties>
               <text value="Autores:"/>
             </properties>
-          </component>
-          <component id="a5ab0" class="javax.swing.JTextField" binding="txtAutores">
-            <constraints>
-              <grid row="4" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
           </component>
           <component id="8369c" class="javax.swing.JLabel" binding="lblEditora">
             <constraints>
@@ -269,6 +263,17 @@
             </constraints>
             <properties>
               <text value="Não"/>
+            </properties>
+          </component>
+          <component id="39a18" class="javax.swing.JTextArea" binding="txtAutores">
+            <constraints>
+              <grid row="4" column="1" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="50"/>
+              </grid>
+            </constraints>
+            <properties>
+              <lineWrap value="true"/>
+              <wrapStyleWord value="true"/>
             </properties>
           </component>
         </children>
