--- a/src/view/encomenda/EcraEncomendas.form
+++ b/src/view/encomenda/EcraEncomendas.form
@@ -3,9 +3,12 @@
   <grid id="27dc6" binding="painelEcraEncomendas" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="637" height="609"/>
+      <xy x="20" y="20" width="1280" height="720"/>
     </constraints>
-    <properties/>
+    <properties>
+      <minimumSize width="1280" height="720"/>
+      <preferredSize width="1280" height="720"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="4c9e3" class="javax.swing.JLabel" binding="lblEncomendas">
@@ -36,7 +39,9 @@
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <verticalScrollBarPolicy value="22"/>
+        </properties>
         <border type="none"/>
         <children/>
       </scrollpane>
